; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_common_execute.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_common_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @common_execute(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %9 [
    i32 129, label %4
    i32 130, label %4
    i32 132, label %6
    i32 133, label %6
    i32 128, label %8
    i32 131, label %8
  ]

4:                                                ; preds = %1, %1
  %5 = call i32 (...) @client_execute()
  br label %12

6:                                                ; preds = %1, %1
  %7 = call i32 (...) @server_execute()
  br label %12

8:                                                ; preds = %1, %1
  br label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @custom_op_execute(i32 %10)
  br label %12

12:                                               ; preds = %9, %8, %6, %4
  ret void
}

declare dso_local i32 @client_execute(...) #1

declare dso_local i32 @server_execute(...) #1

declare dso_local i32 @custom_op_execute(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
